--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav li{
     float: right;
     color: black;
     font-family: monospace;
-    padding-right: 80px;
+    padding-right: 30px;
     margin-top: 0px;
     padding-top: 0px;
     font-size: 14px;
@@ -28,7 +28,7 @@ nav li{
     display: inline-flex;
     float: left;
     height: 100px;
-    width: 15%;
+    width: 18%;
     padding-top: 10px;
     padding-left: 10px;
 }
@@ -43,6 +43,52 @@ li a:hover{
 }
 li a:active{
     border: solid 1px lightblue;
+}
+.checkbtn{
+    font-size: 30px;
+    color:black;
+    float: right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+@media (max-width: 853px){
+    #logo{
+        height: 80px;
+        width: 25%;
+    }
+    nav ul li a{
+        font-size: 14px;
+    }
+}
+@media (max-width: 952px){
+    .checkbtn{
+        display: block;
+    }
+    li{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: white;
+        top: 105px;
+        left: -120%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav li{
+        display: block;
+        margin-top: 15px;
+        line-height: 30px;
+    }
+    nav li a{
+        font-size: 18px;
+    }
+    #check:checked ~ li{
+        left: 0;
+    }
 }
 .wrapper{
     background: url('images/carport6.jpg');
