--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 body{
     margin: 0px;
+    padding: 0%;
     margin-top: 0%;
     background-color: rgb(240, 222, 240);
 }
@@ -89,6 +90,9 @@ li a:active{
     #check:checked ~ li{
         left: 0;
     }
+    li a:checked ~ li{
+        left: -120%;
+    }
 }
 .wrapper{
     background: url('images/carport6.jpg');
@@ -116,6 +120,7 @@ h2{
 }
 .content h3{
     text-align: center;
+    margin-top: 0px;
     font-size: 2em;
     font-weight: lighter;
     font-family: fantasy;
@@ -137,8 +142,8 @@ p a{
     
 }
 .about{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    display: flex;
+    grid-template-columns: 1fr 2fr;
     grid-auto-rows: minmax(150px, auto);
     grid-gap: 1em;
     justify-items: stretch;
@@ -146,8 +151,8 @@ p a{
     padding-right: 50px;
 }
 .box1{
-    grid-column: 1/3;
-    grid-row: 1/3;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 #list{
     font-size: 18px;
@@ -209,7 +214,7 @@ img #owner{
 /*Animation for welcome Text*/
 #slogan{
     animation: text-shadow 3s ease-in-out infinite;
-    line-height: 0.3;
+    line-height: 1;
 }
 #slogan:hover {
     animation-play-state: paused;
@@ -293,5 +298,19 @@ img #owner{
   @keyframes example {
 	from {background-color: rgb(115, 151, 151);}
 	to {background-color:rgb(109, 230, 109);}
+  }
+
+
+  /*Gallary styling starts here*/
+
+  #gallary{
+    flex-grow: 1;
+    height: 200px;
+    min-width:100px;
+    margin-top: 5px;
+    /*Text style*/
+    text-align: center;
+    font-family:cursive;
+
   }
   
