--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ p a{
     background-color: rgb(238, 228, 88);
     
 }
-.about{
+/*.about{
     display: flex;
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: minmax(150px, auto);
@@ -153,7 +153,26 @@ p a{
 .box1{
     grid-column: 1/2;
     grid-row: 1/2;
+}*/
+.about{
+    display:inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    padding: 20px;
 }
+.box1{
+    flex-grow: 1;
+    min-height: 300px;
+    min-width:100px;
+    margin-top: 5px;
+    border-radius: 12px;
+    /*Text style*/
+    text-align: center;
+    font-family:cursive;
+}
+
 #list{
     font-size: 18px;
 }
@@ -180,9 +199,6 @@ p a{
     flex-grow: 1;
     height: 100px;
     min-width:100px;
-}
-img #owner{
-    background-size: cover;
 }
 #service{
     flex-grow: 1;
