--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*CSS for the main page*/
 .head{
     margin-top: 0px;
-    font-size: 8px;
+    font-size: 18px;
 }
 body{
     margin: 0px;
@@ -9,11 +9,15 @@ body{
     margin-top: 0%;
     background-color: rgb(240, 222, 240);
 }
+nav{
+    margin-top: 0px;
+}
 
 nav h1{
     line-height: 120px;
     background-color: rgb(248, 248, 248);
     font-family: monospace;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 nav li{
@@ -33,6 +37,7 @@ nav li{
     width: 18%;
     padding-top: 10px;
     padding-left: 10px;
+    margin-top: 0px;
 }
 li a{
     text-decoration: none;
@@ -41,7 +46,8 @@ li a{
 }
 li a:hover{
     border: solid 1px black;
-    color:lightskyblue;
+    border-radius: 15px;
+    color:rgb(109, 138, 5);
 }
 li a:active{
     border: solid 1px lightblue;
@@ -57,6 +63,7 @@ li a:active{
 #check{
     display: none;
 }
+
 @media (max-width: 853px){
     #logo{
         height: 80px;
@@ -106,6 +113,7 @@ li a:active{
     height: 800px;
     margin-top: 0px;
     padding-top: 0px;
+    /*animation: zoom 3s linear infinite;*/
 }
 .content h1{
     text-align: center;
@@ -229,7 +237,23 @@ p a{
 
 
 /*Animationa starts here for the Index Page*/
-
+/*Animation for wrapper image */
+@keyframes zoom{
+	
+	0%{
+		transform:scale(1);
+	}
+	15%{
+		transform:scale(1);
+	}
+	85%{
+		transform:scale(1);
+	}
+	100%{
+		transform:scale(1);
+	}
+	
+}
 
 /*Animation for welcome Text*/
 #slogan{
