--- a/style.css
+++ b/style.css
@@ -177,10 +177,23 @@ h2{
     font-family: fantasy;
     color:rgb(199, 171, 199);
 }
+.content li{
+    text-align: center;
+    list-style: none;
+}
+.content li a{
+    text-decoration: none;
+    padding: 8px;
+    color: black;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #9bb1d9;
+    border-radius: 20px;
+}
 p{
     /*For the footer*/
     font-family: monospace;
     color: white;
+    font-size: 18px;
 }
 p a{
     /*Footer links*/
@@ -244,7 +257,7 @@ p a{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 2em;
+    gap: 1em;
     padding: 20px;
 }
 #col{
@@ -404,11 +417,13 @@ p a{
   #gallary{
     flex-grow: 1;
     height: 200px;
+    
     min-width:100px;
     margin-top: 5px;
+    margin-bottom: 5px;
     /*Text style*/
     text-align: center;
     font-family:cursive;
-
+    
   }
   
